// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should not render without address 1`] = `<div />`;

exports[`Formatted Address should render address only 1`] = `
<div>
  <div
    class="inline-block truncate"
  >
    <span
      class="text-base font-semibold text-theme-neutral-400"
      data-testid="address__wallet-address"
    >
      ASuusX...GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet name 1`] = `
<div>
  <div
    class="inline-block truncate"
  >
    <span
      class="flex-auto mt-4 mr-1 text-base font-semibold truncate text-theme-neutral-800 max-w-24"
      data-testid="address__wallet-name"
    >
      Sample Wallet
    </span>
    <span
      class="text-base font-semibold text-theme-neutral-400"
      data-testid="address__wallet-address"
    >
      ASuusX...GQ3kqT
    </span>
  </div>
</div>
`;
